src/test/deca/context/valid/initialisation_variable_float_avec_int.deca
// Description :
//initialisation d'une variable de type float avec une variable de type int
//
// Resultats : 
// 	ok

{float x = 3;}