src/test/deca/context/invalid/initialisation_variable_avec_mauvais_type_2.deca
// Description :
//initialisation d'une variable avec le mauvais type
//
// Resultats : 
// 	Erreur contextuelle 
//  Ligne 8 : "types non-compatibles (Règle (3.28))" 

{float x = true;}